Adjust music staff dimensions dynamically upon frame dimension change

--- a/Play That Note/vexFlow/index.html
+++ b/Play That Note/vexFlow/index.html
@@ -7,6 +7,6 @@
         <script type="text/javascript" src = "js/vexScript.js"></script>
 	</head>
 	<body>
-		<canvas id="note"></canvas>
+		<svg id="note"></svg>
 	</body>
 </html>
