--- a/Play That Note/vexFlow/index.html
+++ b/Play That Note/vexFlow/index.html
@@ -7,6 +7,6 @@
         <script type="text/javascript" src = "js/vexScript.js"></script>
 	</head>
 	<body>
-		<svg id="note"></svg>
+		<div id="note"></div>
 	</body>
 </html>
