--- a/Play That Note/License/index.html
+++ b/Play That Note/License/index.html
@@ -7,13 +7,33 @@
 	</head>
 	<body>
 	<ul>
-		<li>App Icon: <a href="https://icons8.com/icon/4419/music-notation">Music Notation Icon in iPhone Style</a> by <a href="http://icons8.com">icons8.com</a> is licensed under <a href="https://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0</a>
+		<li>App Icon: 
+			<a href="https://icons8.com/icon/4419/music-notation" target="_blank">Music Notation Icon in iPhone Style</a> 
+			by 
+			<a href="http://icons8.com" target="_blank">icons8.com</a> 
+			is licensed under 
+			<a href="https://creativecommons.org/licenses/by-nd/3.0/" target="_blank">CC BY-ND 3.0</a>
 		</li>
-		<li>"Play" Icon: <a href="https://icons8.com/icon/9395/treble-clef-filled">Treble Clef Filled Icon in iPhone Style</a> by <a href="http://icons8.com">icons8.com</a> is licensed under <a href="https://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0</a>
+		<li>"Play" Icon: 
+			<a href="https://icons8.com/icon/9395/treble-clef-filled" target="_blank">Treble Clef Filled Icon in iPhone Style</a> 
+			by 
+			<a href="http://icons8.com" target="_blank">icons8.com</a> 
+			is licensed under 
+			<a href="https://creativecommons.org/licenses/by-nd/3.0/" target="_blank">CC BY-ND 3.0</a>
 		</li>
-		<li>"Stats" Icon: <a href="https://icons8.com/icon/3005/combo-chart">Combo Chart Icon in iPhone Style</a> by <a href="http://icons8.com">icons8.com</a> is licensed under <a href="https://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0</a>
+		<li>"Stats" Icon: 
+			<a href="https://icons8.com/icon/3005/combo-chart" target="_blank">Combo Chart Icon in iPhone Style</a> 
+			by 
+			<a href="http://icons8.com" target="_blank">icons8.com</a> 
+			is licensed under 
+			<a href="https://creativecommons.org/licenses/by-nd/3.0/" target="_blank">CC BY-ND 3.0</a>
 		</li>
-		<li>"Settings" Icon: <a href="https://icons8.com/icon/364/settings">Settings Icon in iPhone Style</a> by <a href="http://icons8.com">icons8.com</a> is licensed under <a href="https://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0</a>
+		<li>"Settings" Icon: 
+			<a href="https://icons8.com/icon/364/settings" target="_blank">Settings Icon in iPhone Style</a> 
+			by 
+			<a href="http://icons8.com" target="_blank">icons8.com</a> 
+			is licensed under 
+			<a href="https://creativecommons.org/licenses/by-nd/3.0/" target="_blank">CC BY-ND 3.0</a>
 		</li>
 	</ul>
 	</body>
