Add license for "tries" note icon

--- a/Play That Note/License/index.html
+++ b/Play That Note/License/index.html
@@ -35,6 +35,13 @@
 			is licensed under 
 			<a href="https://creativecommons.org/licenses/by-nd/3.0/" target="_blank">CC BY-ND 3.0</a>
 		</li>
+        <li>"Tries" Icon:
+            <a href="https://icons8.com/icon/74353/music-note-outline" target="_blank">Tries Icon in iPhone Style</a>
+            by
+            <a href="http://icons8.com" target="_blank">icons8.com</a>
+            is licensed under
+            <a href="https://creativecommons.org/licenses/by-nd/3.0/" target="_blank">CC BY-ND 3.0</a>
+        </li>
 	</ul>
 	</body>
 </html>
